Fix move number alignment in PgnViewer

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -77,6 +77,10 @@ div#board.dark move san:hover {
     color: var(--gray-800);
 }
 
+div#board div#boardMoves move {
+    flex-basis: 42.5%;
+}
+
 @media screen and (min-width: 600px) {
     div #board {
         grid-template-rows: 0px auto calc(min(500px, 100vw - 48px)) 37px 200px !important;
